--- a/f_methodselectionlist.phtml
+++ b/f_methodselectionlist.phtml
@@ -15,7 +15,7 @@ function MethodSelectionList
    //
    $result = @$db_link->query("select * from " . $mode . "method order by cardinality");
    //
-   if (!mysqli_error($db_link) and mysqli_num_rows($result))
+   if (!mysqli_error($db_link) && mysqli_num_rows($result))
       {
       echo "<select name=method>\n";
       //
