--- a/trunk/keyclick/form-add-donation-old.phtml
+++ b/trunk/keyclick/form-add-donation-old.phtml
@@ -102,7 +102,7 @@ else
               echo "<table width=100%><tr>"
                  . "<td width=$feedback_column_width_percentage% valign=top bgcolor=#F7F7F7 cellspacing=10>"
                  . "<p><b><u>Previous operation</u></b></p>\n";
-              if (($add_and_repeat) or ($add_and_cancel))
+              if (($add_and_repeat) || ($add_and_cancel))
                  {
                  //
                  // User indicated that data should be saved.  Validate parameters.
@@ -110,11 +110,11 @@ else
                  echo "<small>\n";
                  //
                  if (
-                       (($id != "") and is_numeric($id))
+                       (($id != "") && is_numeric($id))
                     and
-                       (($amount != "") and is_numeric($amount))
+                       (($amount != "") && is_numeric($amount))
                     and
-                       ((trim($email_address == "") or filter_var($email_address,FILTER_VALIDATE_EMAIL)))
+                       ((trim($email_address == "") || filter_var($email_address,FILTER_VALIDATE_EMAIL)))
                     )
                  // then
                     {
@@ -379,7 +379,7 @@ else
                  //
                  if (!$year_num) $year_num = date('Y');
                  //
-                 if ((!$add_and_cancel) and (!$cancel))
+                 if ((!$add_and_cancel) && (!$cancel))
                     {
                     echo "<p><b><u>Current operation:</u></b></p>\n"
                        . "<form name=CurrentOperation action=" . $mode . "form-add-donation-old.phtml method=post>\n"
