--- a/trunk/keyclick/form-add-donation-ooa.phtml
+++ b/trunk/keyclick/form-add-donation-ooa.phtml
@@ -86,7 +86,7 @@ require_once("f_methodselectionlist.phtml");
            echo "<table width=100%><tr>"
               . "<td width=$feedback_column_width_percentage% valign=top bgcolor=#F7F7F7 cellspacing=10>"
               . "<p><b><u>Previous operation</u></b></p>\n";
-           if (($add_and_repeat) or ($add_and_cancel))
+           if (($add_and_repeat) || ($add_and_cancel))
               {
               //
               // User indicated that data should be saved.  Validate parameters.
@@ -104,7 +104,7 @@ require_once("f_methodselectionlist.phtml");
                  and
                     ($zip != "")
                  and
-                    (($amount != "") and is_numeric($amount))
+                    (($amount != "") && is_numeric($amount))
                  )
               // then
                  {
@@ -222,7 +222,7 @@ require_once("f_methodselectionlist.phtml");
            //
            echo "</td><td width=5%>&nbsp;</td><td valign=top>\n";
            //
-           if ((!$add_and_cancel) and (!$cancel))
+           if ((!$add_and_cancel) && (!$cancel))
               {
               echo "<p><b><u>Current operation:</u></b></p>\n"
                  . "<form name=CurrentOperation action=" . $mode . "form-add-donation-ooa.phtml method=post>\n"
