--- a/trunk/keyclick/form-analyze.phtml
+++ b/trunk/keyclick/form-analyze.phtml
@@ -334,7 +334,7 @@ require_once("f_kickoff.phtml");
                        . "            <input type=hidden name=bpn value=$bpn>\n"
                        . "            <input type=hidden name=parent_enumeral value=$enumeral>\n"
                        . "            <input type=hidden name=sql_query value=\"$sql\">\n";
-                    if (($be_avail_as_html == 'TRUE') and ($be_avail_as_zip == 'TRUE'))
+                    if (($be_avail_as_html == 'TRUE') && ($be_avail_as_zip == 'TRUE'))
                        {
                        echo "            <input type=radio name=format value=html checked>View on screen\n"
                           . "               &nbsp;&nbsp;&nbsp;\n"
