--- a/trunk/keyclick/form-edit-donation.phtml
+++ b/trunk/keyclick/form-edit-donation.phtml
@@ -90,7 +90,7 @@ require_once("f_methodselectionlist.phtml");
            echo "<table width=100%><tr>"
               . "<td width=$feedback_column_width_percentage% valign=top bgcolor=#F7F7F7 cellspacing=10>"
               . "<p><b><u>Previous operation</u></b></p>\n";
-           if (($add_and_repeat) or ($add_and_cancel))
+           if (($add_and_repeat) || ($add_and_cancel))
               {
               //
               // User indicated that data should be saved.  Validate parameters.
@@ -98,9 +98,9 @@ require_once("f_methodselectionlist.phtml");
               echo "<small>\n";
               //
               if (
-                    (($id != "") and is_numeric($id))
+                    (($id != "") && is_numeric($id))
                  and
-                    (($amount != "") and is_numeric($amount))
+                    (($amount != "") && is_numeric($amount))
                  )
               // then
                  {
@@ -222,7 +222,7 @@ require_once("f_methodselectionlist.phtml");
            //
            echo "</td><td width=5%>&nbsp;</td><td valign=top>\n";
            //
-           if ((!$add_and_cancel) and (!$cancel))
+           if ((!$add_and_cancel) && (!$cancel))
               {
               //
               // Break the given ISO date string into its constituent parts.
