--- a/trunk/keyclick/perform-update-donation.phtml
+++ b/trunk/keyclick/perform-update-donation.phtml
@@ -90,7 +90,7 @@ require_once("f_methodselectionlist.phtml");
               //
               echo "<small>\n";
               //
-              if (($amount != "") and is_numeric($amount))
+              if (($amount != "") && is_numeric($amount))
                  {
                  //
                  // Determine next value for per_clerk_seq_num.
