--- a/trunk/keyclick/form-act-singly.phtml
+++ b/trunk/keyclick/form-act-singly.phtml
@@ -351,6 +351,7 @@ require_once("f_stateselectionlist.phtml");
                     {
                     echo "   <a name=Donations></a><p><br><b>Donations totaling \$$sum</b>, in reverse chronological order:</p>\n"
                        . "   <small><ol>\n";
+                    $instance = Instance($db_link);
                     for ($i = 1; $i <= $num_donations; $i++)
                        {
                        extract(mysqli_fetch_array($donation_query_result));
@@ -432,7 +433,7 @@ require_once("f_stateselectionlist.phtml");
                           .            " </td>\n"
                           .            " <td>&nbsp;&nbsp;&nbsp;</td>\n"
                           .            " <td>\n"
-                          .              "<form action='https://frompaper2web.com/OscarTRACK/protected/donation_ack_letter.aspx' method=post>\n"
+                          .              "<form action='../$instance[superapp]/protected/donation_ack_letter.aspx' method=post>\n"
                           .                "<input type=hidden name=agency value='$agency'>\n"
                           .                "<input type=hidden name=donor_name value='$name'>\n"
                           .                "<input type=hidden name=address value='$address1'>\n"
@@ -447,7 +448,7 @@ require_once("f_stateselectionlist.phtml");
                           echo "</td>\n"
                              . "<td>&nbsp;&nbsp;&nbsp;</td>\n"
                              . "<td>\n"
-                             .   "<form action='https://frompaper2web.com/OscarTRACK/protected/donation_ack_email_trigger.aspx' method=post>\n"
+                             .   "<form action='../$instance[superapp]/protected/donation_ack_email_trigger.aspx' method=post>\n"
                              .     "<input type=hidden name=agency value='$agency'>\n"
                              .     "<input type=hidden name=member_email_address value='" . EmailAddrOfBpn($db_link,$bpn,$mode) . "'>\n"
                              .     "<input type=hidden name=donor_name value='$name'>\n"
