--- a/f_putlibphotorandomplaced.phtml
+++ b/f_putlibphotorandomplaced.phtml
@@ -2,28 +2,21 @@
 //
 // $Id$
 //
-require_once("f_connectselectdbinstanceunpublishedkalipso.phtml");
-//
 function PutLibPhotoRandomPlaced
    (
+   $ini,
+   $dbkalipso_link,
    $placement,
    $limit = "",
    $align = ""
    )
    {
-   //
-   // Connect to the database.
-   //
-   $conn = ConnectSelectDbInstanceUNPUBLISHEDkalipso($db_link);
-   //
-   // Create the SQL statement
-   //
    $sql = "select div_spec,frame_num from photo_detail where placement like '%$placement%' order by rand()";
-   if ($limit != "") $sql = $sql . " limit $limit";
+   if ($limit != "") $sql .= " limit $limit";
    //
    // Execute the statement
    //
-   $result_set = $db_link->query($sql) or die(mysqli_error($db_link));
+   $result_set = $dbkalipso_link->query($sql) or die(mysqli_error($dbkalipso_link));
    //
    // Check how many rows were returned
    //
@@ -41,8 +34,8 @@ function PutLibPhotoRandomPlaced
             //
             // This sets up the $div_spec and $frame_num variables.
             //
-         $image_source_spec = "http://kalipso.phpwebhosting.com/photolib/div/$div_spec/$frame_num-i.jpg";
-         echo "<a href=\"http://kalipso.phpwebhosting.com/photolib/present-photo.phtml?div_spec=$div_spec&frame_num=$frame_num\">\n";
+         $image_source_spec = $ini[server][photodb_prefix] . "div/$div_spec/$frame_num-i.jpg";
+         echo "<a href=\"" . $ini[server][host_url] . "/photolib/present-photo.phtml?div_spec=$div_spec&frame_num=$frame_num\">\n";
          $size = @GetImageSize("$image_source_spec");
          echo "   <img border=\"2\" src=$image_source_spec $size[3] align=$align>\n";
          echo "</a>\n";
