--- a/faq.phtml
+++ b/faq.phtml
@@ -2,15 +2,17 @@
 //
 // $Id$
 //
-require_once("f_runmode.phtml");
-$mode = "";
-if (RunMode($PHP_SELF)) error_reporting(E_ALL);
-//
 require_once("f_homepageurl.phtml");
 require_once("f_putlibphotorandomplaced.phtml");
 require_once("f_bodyopen.phtml");
 require_once("f_connectselectdbinstanceunpublished.phtml");
 require_once("f_roleemailaddress.phtml");
+//
+$ini = AppSettings();
+$db_link = DbLink($ini);
+$dbkalipso_link = DbkalipsoLink($ini);
+//
+if ($ini[app][do_report_all_errors]) error_reporting(E_ALL);
 ?>
 <html>
 
@@ -24,27 +26,12 @@ require_once("f_roleemailaddress.phtml");
       <td>
         <table><tr><td>
            <h6 align="center">
-              <a href="<? echo HomePageUrl(); ?>">KEYCLICK SYSTEM</a></h6>
+              <a href="javascript:close();">KEYCLICK SYSTEM</a></h6>
            <h1 align="center">Frequently Asked Questions</h1>
         </td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td><td>
-           <? PutLibPhotoRandomPlaced("eye-candy",1); ?>
+           <? PutLibPhotoRandomPlaced($ini,$dbkalipso_link,"eye-candy",1); ?>
         </td></tr></table>
         <hr>
-        <?
-        if (ConnectSelectDbInstanceUNPUBLISHED($db_link) != "TRUE")
-           {
-           ?>
-           <h2><i>Sorry...</i></h2>
-           <b>
-           <blockquote>
-              <? echo "<p>KEYclick's database is temporarily offline.&nbsp; Please try again later.</p>"; ?>
-           </blockquote>            
-           </b>
-           <?
-           }
-        else
-           {
-           ?>
            <p>To search for a particular word or phrase, press CTRL-F.</p>
            <ul>
               <?
@@ -72,9 +59,6 @@ require_once("f_roleemailaddress.phtml");
                  }
               ?>
            </blockquote>
-           <?
-           }
-        ?>
         <hr>
         <p><small><small><em><pre>$Id$</pre></em></small></small>
        </td>
