--- a/form-add-resident.phtml
+++ b/form-add-resident.phtml
@@ -16,8 +16,6 @@ if (!ini_get('register_globals'))
     extract($superglobal, EXTR_SKIP);
     }
   }
-require_once("f_runmode.phtml");
-$mode = "";
 //
 // Assign incoming arguments to themselves to prevent 'uninitialized variable' warnings later.
 //
@@ -26,17 +24,18 @@ $add_and_cancel = $add_and_cancel;
 $add_and_repeat = $add_and_repeat;
 $cancel = $cancel;
 //
-if (RunMode($PHP_SELF)) error_reporting(E_ALL);
-//
-require_once("f_homepageurl.phtml");
 require_once("f_bodyopen.phtml");
-require_once("f_connectselectdbinstanceunpublished.phtml");
 require_once("f_roleemailaddress.phtml");
 require_once("f_bevalidboardingpass.phtml");
 require_once("f_kickoff.phtml");
 require_once("f_formattednoteappendage.phtml");
 require_once("f_emailaddrofbpn.phtml");
 require_once("f_streetselectionlist.phtml");
+//
+$ini = AppSettings();
+$db_link = DbLink($ini);
+//
+if ($ini[app][do_report_all_errors]) error_reporting(E_ALL);
 ?>
 <html>
 
@@ -49,28 +48,11 @@ require_once("f_streetselectionlist.phtml");
 <table border="0" cellpadding="0" cellspacing="0" width="80%" align="center">
    <tr>
       <td>
-        <h6 align="center"><a href=<? echo HomePageUrl(); ?>>KEYCLICK SYSTEM</a></h6>
+        <h6 align="center"><a href="javascript:close();">KEYCLICK SYSTEM</a></h6>
         <h1 align="center">Add resident</h1>
         <hr>
         <br>
         <?php
-        if (ConnectSelectDbInstanceUNPUBLISHED($db_link) != "TRUE")
-           {
-           ?>
-           <h2><i>Sorry...</i></h2>
-           <b>
-           <blockquote>
-              <? echo "<p>KEYclick's database is temporarily offline.&nbsp; Please try again later.</p>"; ?>
-           </blockquote>            
-           </b>
-           <?php
-           }
-        else
-           {
-           //
-           // Database is up.
-           //
-           //
            $agency = BeValidBoardingPass($db_link,$bpn,$mode);
            if ($agency == "")
               {
@@ -212,7 +194,6 @@ require_once("f_streetselectionlist.phtml");
               echo "</td></tr></table>\n";
               //
               } // BeValidBoardingPass
-           } // database up
         ?>
         <br>
         <p><small><small><em><pre>$Id$</pre></em></small></small>
